remove funcionalidade esqueceu a senha e altualizar alguma necessiadades